syntax = "proto3";

package io.harness.pms.contracts.triggers;

option java_multiple_files = true;

import "product/ci/scm/proto/scm.proto";

message TriggerPayload {
  string jsonPayload = 1;
  ParsedPayload parsedPayload = 2;
  Type type = 3;
  map<string, string> headers = 4;
}

message ParsedPayload {
  oneof payload {
    product.ci.scm.proto.PullRequestHook pr = 1;
    product.ci.scm.proto.PushHook push = 2;
  }
}

enum Type {
  CUSTOM = 0;
  GIT = 1;
  SCHEDULED = 2;
}
