// Copyright 2021 Harness Inc.
// 
// Licensed under the Apache License, Version 2.0
// http://www.apache.org/licenses/LICENSE-2.0

syntax = "proto3";
package io.harness.eventsframework.schemas.entity;
import "google/protobuf/wrappers.proto";

option java_multiple_files = true;
option go_package = "970_ng_commons";

message InputSetReferenceProtoDTO {
  google.protobuf.StringValue accountIdentifier = 1;
  google.protobuf.StringValue orgIdentifier = 2;
  google.protobuf.StringValue projectIdentifier = 3;
  google.protobuf.StringValue pipelineIdentifier = 4;
  google.protobuf.StringValue identifier = 5;
}
